<resources>
    <string name="app_name">Winder</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="temp_interval">Temperature:</string>
    <string name="nedboer_intervall">Precipitation:</string>
    <string name="vind_styrke">Windspeed:</string>
    <string name="vind_retning">Wind direction:</string>
    <string name="sjekk_intervall">Check interval:</string>
...
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted">Deleted</string>
    <string name="something_whent_wrong">Something went wrong..</string>
    <string name="delete_message">Do you want to delete de alert?</string>
    <string name="empty_event_list_text">No weather events found </string>


    <!-- AlertSettings Preference strings: -->
    <string name="on_next_button_click_warning">Enter a valid location!</string>
    <string name="wind_dir_not_chosen">"Please select preferred wind directions"</string>
...
    <string name="checkinterval_twelve">Every 12 hour</string>
    <string name="checkinterval_day">Every 24 hour</string>
    <string name="checkinterval_twodays">Every 48 hour</string>


    <!--AlertPreferences-->
    <string name="preferences_temperature">Temperature</string>
    <string name="preferences_temperature_scale">\u2103</string>
    <string name="preferences_precipitation">Precipitation</string>
    <string name="preferences_precipitation_amount_period">mm, per 6 hour period</string>
    <string name="preferences_windspeed">Windspeed</string>
    <string name="preferences_windspeed_description">m/s</string>
    <string name="preferences_winddir">Wind direction</string>
    <string name="preferences_weekdays_check">Weekdays for check</string>
    <string name="preferences_interval">Check interval</string>
...
