...
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        android:onClick="onEditAlertButtonClick"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_deleteItem"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="80dp"
        android:layout_marginEnd="80dp"
        android:src="@android:drawable/ic_delete"
        android:tint="@color/colorWhite"
...
